<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/menu_online_buses"
            android:icon="@drawable/ic_google_maps"
            android:title="@string/online_buses" />
        <item
            android:id="@+id/menu_all_buses"
            android:icon="@drawable/ic_bus"
            android:title="@string/all_buses" />
        <item
            android:id="@+id/menu_all_teachers"
            android:icon="@drawable/ic_human_child"
            android:title="@string/all_teachers" />
        <item
            android:id="@+id/menu_pending_requests"
            android:icon="@drawable/ic_refresh"
            android:title="@string/pending_requests" />
    </group>
    <item android:title="@string/more_options">
        <menu>
            <item
                android:id="@+id/menu_change_reg_key"
                android:icon="@drawable/ic_key_change"
                android:title="@string/change_reg_key" />
            <item
                android:id="@+id/menu_logout"
                android:icon="@drawable/ic_logout"
                android:title="@string/logout" />
            <item
                android:id="@+id/menu_about"
                android:icon="@drawable/ic_info"
                android:title="@string/about" />
        </menu>
    </item>
</menu>
