<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tv1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:gravity="center"
        android:text="@string/select_buses_to_subscribe"
        android:textAppearance="@style/TextAppearance.AppCompat.Large" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/checkboxes"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/tv1"
        android:padding="10dp" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/emptyView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:text="@string/no_item"
        android:visibility="gone" />

    <me.zhanghai.android.materialprogressbar.MaterialProgressBar
        android:id="@+id/progressBar"
        style="@style/FirebaseUI.TopProgressBar"
        android:layout_alignParentBottom="true" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/next_button"
        style="@style/Widget.MaterialComponents.Button"
        android:layout_width="120dp"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:paddingEnd="@dimen/padding_medium"
        android:paddingStart="@dimen/padding_medium"
        android:text="@string/next"
        app:icon="@drawable/ic_next"
        app:iconGravity="end" />
</RelativeLayout>
