<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.BusDriverActivity">

    <me.zhanghai.android.materialprogressbar.MaterialProgressBar
        android:id="@+id/progressBar"
        style="@style/FirebaseUI.TopProgressBar" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/progressBar">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <androidx.appcompat.widget.SwitchCompat
                android:id="@+id/broadcast"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp"
                android:checked="false"
                android:text="@string/broadcast_my_location" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/tl1"
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:layout_below="@id/broadcast"
                android:layout_marginTop="@dimen/fui_field_padding_vert"
                android:hint="@string/a_short_message_to_broadcast">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/message_field"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:maxLength="160" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/button_broadcast_msg"
                style="@style/Widget.MaterialComponents.Button"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:layout_below="@id/tl1"
                android:layout_alignParentEnd="true"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp"
                android:paddingStart="@dimen/padding_large"
                android:paddingEnd="@dimen/padding_large"
                android:text="@string/broadcast"
                app:icon="@drawable/ic_cast"
                app:iconGravity="end" />
        </RelativeLayout>
    </ScrollView>
</RelativeLayout>