<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <androidx.cardview.widget.CardView
                android:id="@+id/cardview"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/colorPrimary"
                    android:gravity="center"
                    android:orientation="vertical"
                    android:padding="@dimen/padding_medium">

                    <de.hdodenhof.circleimageview.CircleImageView
                        android:id="@+id/profile_pic"
                        android:layout_width="@dimen/profile_pic_size"
                        android:layout_height="@dimen/profile_pic_size"
                        android:clickable="true"
                        android:focusable="true"
                        android:src="@drawable/splash_image"
                        app:civ_border_color="@color/colorPrimaryDark"
                        app:civ_border_width="@dimen/profile_pic_border_width" />

                    <androidx.appcompat.widget.AppCompatTextView
                        android:id="@+id/contact"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="8dp"
                        android:text="email@gmail.com"
                        android:textColor="@android:color/white" />

                </LinearLayout>
            </androidx.cardview.widget.CardView>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/ti1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/cardview"
                android:layout_margin="@dimen/padding_small"
                android:hint="Full Profile Name">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/name_field"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPersonName"
                    android:maxLength="32"
                    android:text="Full Profile Name" />
            </com.google.android.material.textfield.TextInputLayout>

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tv1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/ti1"
                android:layout_marginTop="@dimen/padding_medium"
                android:gravity="center"
                android:text="@string/sign_up_as_a"
                android:textAppearance="@style/TextAppearance.AppCompat.Large" />

            <RadioGroup
                android:id="@+id/rg1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/tv1"
                android:layout_marginStart="8dp">

                <androidx.appcompat.widget.AppCompatRadioButton
                    android:id="@+id/teacher"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:checked="true"
                    android:text="@string/teacher" />

                <androidx.appcompat.widget.AppCompatRadioButton
                    android:id="@+id/bus_driver"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/bus_driver" />
            </RadioGroup>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/rg1"
                android:layout_margin="@dimen/padding_small"
                android:hint="@string/reg_key">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/reg_key"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPassword"
                    android:maxLength="100" />
            </com.google.android.material.textfield.TextInputLayout>
        </RelativeLayout>
    </ScrollView>

    <me.zhanghai.android.materialprogressbar.MaterialProgressBar
        android:id="@+id/progressBar"
        style="@style/FirebaseUI.TopProgressBar"
        android:layout_alignParentBottom="true" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/next_button"
        style="@style/Widget.MaterialComponents.Button"
        android:layout_width="120dp"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:paddingEnd="@dimen/padding_medium"
        android:paddingStart="@dimen/padding_medium"
        android:text="@string/next"
        app:icon="@drawable/ic_next"
        app:iconGravity="end" />
</RelativeLayout>